--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   html, body{
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
+  }
+  canvas {
+    outline: solid green;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   </style>
 </head>
