--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QuadTree test</title>
+  <title>Quadtree test</title>
   <style>
   html, body{
     margin: 0px;
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <script src="main.js" type="module"></script>
+  <script src="example.js" type="module"></script>
 </body>
 </html>
