added fps counter in example.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
+  <div>FPS: <span></span></div>
   <script src="example.js" type="module"></script>
 </body>
 </html>
