--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <div>FPS: <span></span></div>
+  <div>FPS: <span>0</span></div>
   <script src="example.js" type="module"></script>
 </body>
 </html>
