--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
   <div>FPS: <span>0</span></div>
+  <canvas></canvas>
   <script src="example.js" type="module"></script>
 </body>
 </html>
