changed allObjects to private and into a map

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     margin: 0px;
     padding: 0px;
     overflow: hidden;
+    background: black;
+    color: white;
   }
   canvas {
     outline: solid green;
