--- a/index.html
+++ b/index.html
@@ -2,29 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quadtree test</title>
+  <script src="BozoQuadtree.js"></script>
+  <script defer src="index.js"></script>
   <style>
-  html, body{
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-    background: black;
-    color: white;
-  }
-  canvas {
-    outline: solid green;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+    body {
+      background: darkslategrey;
+    }
   </style>
 </head>
 <body>
-  <div>FPS: <span>0</span></div>
-  <canvas></canvas>
-  <script src="example.js" type="module"></script>
 </body>
 </html>
